--- a/W_UP_01.rmd
+++ b/W_UP_01.rmd
@@ -1,6 +1,6 @@
 ---
 title: "W_UP_01"
-author: "your name here"
+author: "Joshua Ramirez"
 date: "fall 2020"
 output: html_document
 ---
@@ -31,6 +31,16 @@ $H_A$: The average number of pushups done by line players is statistically diffe
 
 <!--Decide on your methods: use "variable analysis" or other appropriate descriptors. Make sure to choose at least one graphical method and at least one numerical method.!-->
 
+skill is categorical variable
+pushups is a numerical variable
+
+
+We predict pushups based on position, viz .,
+pushups ~ position
+
+
+so we have numerical depends on categorical
+load the num-cat helper file
 # Results
 
 <!--Divide this section into two sub-sections: One for your descriptive results and one for your inferential results.!-->
@@ -38,19 +48,35 @@ $H_A$: The average number of pushups done by line players is statistically diffe
 ## Descriptive Results
 
 ### Graphical Descriptive Results
+```{r}
+boxplot(pushups~position,data=mydata)
+```
 
+The boxplot shows that the skill players do more pushups than the kill position
 <!--Graphical results here. Make sure to show your code. Provide appropriate labels for axes, giving units if possible, and provide a good title for the graph, too. Use the graphical results to describe the patterns if any that exist in the data as focused toward the research question!-->
 
 ### Numerical Descriptive Results
 
 <!--Numerical results go here. Use the numerical results to describe the patterns if any that exist in the data as focused toward the research question!-->
 
+```{r}
+favstats(pushups~position,data=mydata)
+```
+
+skill players do on average 17 psuhups while line players do 50 pushups
+
 ## Inferential Results
 
+```{r}
+t.test(pushups~position,data=mydata )
+```
+The p value is 0.000009421, which is less than 0.05, so we reject the null hypothesis and conclude there is a difference between line and skill players is 2 minutes.
+
+The box plot and the t test shows there is sufficient evidence that there is sufficient evidence a stagically difference in push up performance between group
 <!--State hypothesis clearly. Make sure your discussion of the inferential test covers all the aspects that the test output produces, such as test statistic, p-value etc. Make a decision about the null hypothesis, explain the assumptions on which the selected test/procedure was based, and why the chosen procedure satisfys the assumptions and is appropriate to answer the research question!-->
 
 
 # Discussion and Conclusion
-
+Data from George town College footall concludes that skill players can do more push ups than line players within two minutes
 <!--Discussion and conclusion here. If you found a relationship be sure to consider whether the relationship occurs because one of the variavbles causes the other, or whether they perhasps are related for some other reason. Watch the chapter 6 videos from the GeorgeTown videos collection.!-->
 
